# evmone

./: .bumpversion.cfg  .clang-tidy  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  circle.yml  codecov.yml
cmake/: blst.cmake
cmake/Hunter/: config.cmake
cmake/cable/: CableCompilerSettings.cmake
cmake/toolchains/: clang-libcxx-debug.cmake  riscv32.cmake
evmc/: CMakeLists.txt
evmc/include/evmc/: evmc.h  evmc.hpp  helpers.h  mocked_host.hpp
evmc/lib/: CMakeLists.txt
evmc/lib/loader/: CMakeLists.txt
evmc/lib/mocked_host/: CMakeLists.txt
evmc/lib/tooling/: CMakeLists.txt
include/evmmax/: evmmax.hpp
lib/: CMakeLists.txt
lib/evmmax/: CMakeLists.txt
lib/evmone/: CMakeLists.txt  advanced_analysis.hpp  advanced_execution.cpp  advanced_instructions.cpp  baseline.cpp  baseline.hpp  baseline_analysis.cpp  baseline_execution.cpp  baseline_instruction_table.cpp  constants.hpp  create_address.cpp  create_address.hpp  execution_state.hpp  instruction_traits.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  tracing.cpp  vm.cpp  vm.hpp
lib/evmone_precompiles/: CMakeLists.txt  blake2b.cpp  bls.cpp  bls.hpp  bn254.cpp  bn254.hpp  ecc.hpp  keccak.c  keccak.h  keccak.hpp  kzg.cpp  kzg_precomputed_lines.cpp  kzg_precomputed_lines.hpp  kzg_setup_g2_1_lines.cpp  kzg_setup_g2_1_lines.hpp  modexp.cpp  mulmod.cpp  mulmod.hpp  ripemd160.cpp  secp256k1.cpp  secp256k1.hpp  secp256r1.cpp  secp256r1.hpp  sha256.cpp
lib/evmone_precompiles/pairing/: field_template.hpp
lib/evmone_precompiles/pairing/bn254/: fields.hpp  pairing.cpp  utils.hpp
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  bench.cpp  helpers.hpp
test/blockchaintest/: CMakeLists.txt  blockchaintest.cpp  blockchaintest.hpp  blockchaintest_loader.cpp  blockchaintest_runner.cpp  blockchaintest_runner.hpp
test/fuzzer/: fuzzer.cpp
test/integration/: CMakeLists.txt
test/integration/blockchaintest/: CMakeLists.txt  eip7778_block_gas.json  test.json
test/integration/export/: CMakeLists.txt
test/integration/statetest/: CMakeLists.txt
test/integration/t8n/: CMakeLists.txt
test/integration/t8n/osaka_blob_schedule/: blobParams.json
test/precompiles_bench/: CMakeLists.txt  precompiles_bench.cpp
test/state/: CMakeLists.txt  account.hpp  blob_params.hpp  blob_schedule.cpp  blob_schedule.hpp  block.cpp  block.hpp  bloom_filter.cpp  bloom_filter.hpp  errors.hpp  ethash_difficulty.cpp  host.cpp  host.hpp  mpt_hash.cpp  precompiles.cpp  precompiles.hpp  precompiles_internal.hpp  precompiles_libsecp256k1.cpp  precompiles_libsecp256k1.hpp  precompiles_silkpre.cpp  precompiles_stubs.cpp  requests.cpp  rlp.hpp  rlp_common.hpp  state.cpp  state.hpp  system_contracts.cpp  system_contracts.hpp  test_state.hpp  transaction.cpp  transaction.hpp
test/statetest/: CMakeLists.txt  statetest.cpp  statetest.hpp  statetest_export.cpp  statetest_loader.cpp  statetest_runner.cpp
test/t8n/: CMakeLists.txt  t8n.cpp
test/unittests/: CMakeLists.txt  analysis_test.cpp  baseline_analysis_test.cpp  blockchaintest_loader_test.cpp  create_address_test.cpp  eof_example_test.cpp  evm_calls_test.cpp  evm_eip3860_initcode_test.cpp  evm_eip663_dupn_swapn_test.cpp  evm_eip663_exchange_test.cpp  evm_eip7843_slotnum_test.cpp  evm_eip8024_swapn_dupn_exchange_test.cpp  evm_eof_function_test.cpp  evm_eof_rjump_test.cpp  evm_eof_test.cpp  evm_memory_test.cpp  evm_other_test.cpp  evm_state_test.cpp  evm_storage_test.cpp  evm_test.cpp  evm_undefined_instructions_test.cpp  evmmax_bn254_add_test.cpp  evmmax_bn254_from_bytes.cpp  evmmax_bn254_mul_test.cpp  evmmax_bn254_pairing_test.cpp  evmmax_secp256k1_test.cpp  evmmax_test.cpp  evmone_test.cpp  execution_state_test.cpp  instructions_test.cpp  jumpdest_analysis_test.cpp  precompiles_bn254_test.cpp  precompiles_expmod_test.cpp  precompiles_kzg_test.cpp  precompiles_secp256r1_test.cpp  state_block_test.cpp  state_deposit_requests_test.cpp  state_mpt_hash_test.cpp  state_mpt_test.cpp  state_new_account_address_test.cpp  (+30 more)
test/utils/: CMakeLists.txt  blob_schedule.cpp  blob_schedule.hpp  block_transition.cpp  block_transition.hpp  blockchaintest.hpp  blockchaintest_loader.cpp  bytecode.hpp  mpt.cpp  mpt.hpp  mpt_hash.cpp  mpt_hash.hpp  rlp.hpp  rlp_encode.cpp  rlp_encode.hpp  run.cpp  run.hpp  statetest.hpp  statetest_export.cpp  statetest_loader.cpp  statetest_logs_hash.cpp  t8n.cpp  t8n.hpp  test_state.cpp  test_state.hpp  utils.cpp
tools/: CMakeLists.txt
tools/evmc/: CMakeLists.txt
tools/evmone/: CMakeLists.txt  main.cpp
